RMSE nn regression

--- a/notebooks/UFF/nn_regression.ipynb
+++ b/notebooks/UFF/nn_regression.ipynb
@@ -2732,16 +2732,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6164092926472113"
+       "'r2_score(y_test, outputs)=0.6164092926472113 sqrt(mean_squared_error(y_test, outputs))=0.5524158458268564'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2749,7 +2749,7 @@
    "source": [
     "from sklearn.metrics import r2_score\n",
     "\n",
-    "r2_score(y_test, outputs)"
+    "f\"{r2_score(y_test, outputs)=} {sqrt(mean_squared_error(y_test, outputs))=}\""
    ]
   }
  ],
